--- a/components/part-dialog-create-field/template.html
+++ b/components/part-dialog-create-field/template.html
@@ -1,5 +1,7 @@
 <part-dialog id="dialog" closed>
   <part-form-field id="form"></part-form-field>
-  <button class="action" id="close" ev.click="on_click_close">Back</button>
-  <button class="action" id="create" ev.click="on_click_create">Create</button>
+  <div slot="footer">
+    <button id="close" ev.click="on_click_close">Back</button>
+    <button id="create" ev.click="on_click_create">Create</button>
+  </div>
 </part-dialog>
