workflow create model

--- a/components/part-field-boolean/template.html
+++ b/components/part-field-boolean/template.html
@@ -1,1 +1,4 @@
-<div>edit boolean field</div>
+<div id="field">
+  <label id="label" text="data.label"></label>
+  <input id="input" type="checkbox">
+</div>
