--- a/components/part-dialog-create-model/template.html
+++ b/components/part-dialog-create-model/template.html
@@ -1,5 +1,7 @@
-<part-dialog id="dialog" closed>
+<part-dialog id="dialog">
   <part-form-model id="form"></part-form-model>
-  <part-button slot="buttons" id="button_create" ev.click="on_click_button_create">Create</part-button>
-  <part-button slot="buttons" id="button_back" ev.click="on_click_button_back">Back</part-button>
+  <part-button id="button_create" ev.click="on_click_button_create">Create</part-button>
+  <div slot="footer">
+    <part-button id="button_back" ev.click="on_click_button_back">Back</part-button>
+  </div>
 </part-dialog>
