--- a/components/part-dialog/style.css
+++ b/components/part-dialog/style.css
@@ -1,5 +1,11 @@
 :host {
+  display: none;
+}
+:host-context([open]) {
   display: flex;
+}
+
+:host {
   align-items: center;
   justify-content: center;
 
@@ -12,10 +18,6 @@
   box-sizing: border-box;
   width: 100%;
   height: 100%;
-}
-
-:host-context([closed]) {
-  display: none;
 }
 
 #overlay {
