--- a/components/part-field-number/template.html
+++ b/components/part-field-number/template.html
@@ -1,4 +1,4 @@
 <div id="field">
   <label id="label" text="data.label"></label>
-  <input id="input" type="number" prop.value="data.value" ev.change="on_change">
+  <input id="input" type="number">
 </div>
