--- a/components/part-list-model/template.html
+++ b/components/part-list-model/template.html
@@ -1,3 +1,3 @@
 <div id="items" repeat="data.items">
-  <part-item-model id="item" data.item="item" ev.click="on_click_item"></part-item-model>
+  <part-item-model id="item" data.item="scope.item" ev.click="on_click_item"></part-item-model>
 </div>
