workflow edit model

--- a/components/part-dialog-create-field/template.html
+++ b/components/part-dialog-create-field/template.html
@@ -1,6 +1,6 @@
-<part-dialog id="dialog" closed>
+<part-dialog id="dialog">
   <part-form-field id="form"></part-form-field>
-  <div slot="footer">
+  <div id="buttons">
     <button id="close" ev.click="on_click_close">Back</button>
     <button id="create" ev.click="on_click_create">Create</button>
   </div>
