--- a/components/part-dialog-edit-field/template.html
+++ b/components/part-dialog-edit-field/template.html
@@ -1,5 +1,7 @@
-<part-dialog id="dialog" closed>
-  <part-form-field id="form" ev.submit="on_update_field"></part-form-field>
-  <button class="action" id="close" ev.click="on_click_close">Back</button>
-  <button class="action" id="create" ev.click="on_click_create">Create</button>
+<part-dialog id="dialog">
+  <part-form-field id="form"></part-form-field>
+  <div id="buttons">
+    <button class="action" id="close" ev.click="on_click_close">Back</button>
+    <button class="action" id="create" ev.click="on_click_update">Update</button>
+  </div>
 </part-dialog>
