--- a/components/part-dialog-edit-model/template.html
+++ b/components/part-dialog-edit-model/template.html
@@ -1,5 +1,7 @@
-<part-dialog id="dialog" closed>
-  <part-form-model id="form" prop.data="model"></part-form-model>
-  <button class="action" id="close" ev.click="on_click_close">Back</button>
-  <button class="action" id="create" ev.click="on_click_create">Update</button>
+<part-dialog id="dialog">
+  <part-form-model id="form" data.model="data.model"></part-form-model>
+  <div id="buttons">
+    <button id="close" ev.click="on_click_close">Back</button>
+    <button id="create" ev.click="on_click_update">Update</button>
+  </div>
 </part-dialog>
