--- a/components/part-list-field/template.html
+++ b/components/part-list-field/template.html
@@ -1,3 +1,3 @@
 <div id="items" repeat="data.items">
-  <part-item-field data.item="item"></part-item-field>
+  <part-item-field data.item="scope.item"></part-item-field>
 </div>
