--- a/components/page-model-field-new/template.html
+++ b/components/page-model-field-new/template.html
@@ -1,10 +1,9 @@
 <div id="page">
   <div id="heading">
-    <h1 id="title"></h1>
+    <h1 id="title">Create new field</h1>
   </div>
-
   <div id="main">
-    <part-form-field id="form"></part-form-field>
-    <button id="create" ev.click="on_click_create">Create</button>
+    <part-form-create-field id="form" part="form"></part-form-create-field>
+    <part-button id="create" ev.click="on_click_create">Create</part-button>
   </div>
 </div>
