--- a/components/part-field-boolean/template.html
+++ b/components/part-field-boolean/template.html
@@ -1,4 +1,3 @@
-<div id="field">
-  <label id="label" text="data.label"></label>
-  <input id="input" type="checkbox">
-</div>
+<input id="input" type="checkbox">
+<label id="label" text="data.label"></label>
+<div id="description" text="data.description"></div>
