--- a/components/part-field-enum/template.html
+++ b/components/part-field-enum/template.html
@@ -1,5 +1,4 @@
 <div id="field">
   <label id="label" text="data.label"></label>
-  <select id="input">
-  </select>
+  <select id="input" part="input"></select>
 </div>
