--- a/components/part-field-text/template.html
+++ b/components/part-field-text/template.html
@@ -1,4 +1,5 @@
 <div id="field">
   <label id="label" text="label"></label>
   <div id="input"></div>
+  <div id="description" text="description"></div>
 </div>
