--- a/components/part-item-field/template.html
+++ b/components/part-item-field/template.html
@@ -1,8 +1,3 @@
-<div id="part">
-  <div mode="details">
-    <div id="name" text="data.item.name"></div>
-    <div id="type" text="data.item.type"></div>
-    <div id="ui" text="data.item.ui"></div>
-    <button id="edit" ev.click="on_click_edit">edit</button>
-  </div>
-</div>
+<div id="name" text="data.item.name"></div>
+<div id="type" text="data.item.type"></div>
+<a id="edit" attr.href="data.item.link">edit</button>
