--- a/components/part-list-model/template.html
+++ b/components/part-list-model/template.html
@@ -1,3 +1,3 @@
-<div id="items" repeat="data.items">
-  <part-item-model id="item" data.item="scope.item" ev.click="on_click_item"></part-item-model>
-</div>
+<template repeat="data.items">
+  <part-item-model id="item" data.item="scope.item"></part-item-model>
+</template>
