--- a/components/page-model-new/template.html
+++ b/components/page-model-new/template.html
@@ -1,6 +1,6 @@
 <div id="page">
   <div id="heading">
-    <h1 id="title"></h1>
+    <h1 id="title">Create new model</h1>
   </div>
   <div id="main">
     <part-form-model id="form"></part-form-model>
