--- a/components/page-model/style.css
+++ b/components/page-model/style.css
@@ -1,3 +1,17 @@
 :host {
   display: block;
 }
+
+#page {
+  box-sizing: border-box;
+  padding: 20px;
+}
+
+#description {
+  margin-bottom: 20px;
+}
+
+#fields {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
