--- a/components/part-button/style.css
+++ b/components/part-button/style.css
@@ -1,3 +1,22 @@
 :host {
   display: content;
 }
+
+#button {
+  display: inline-block;
+
+  box-sizing: border-box;
+  padding: 0.6em 1.4em;
+
+  border-radius: 2px;
+
+  font-size: smaller;
+  font-weight: 600;
+  background-color: #efefef;
+  color: inherit;
+  text-decoration: none;
+}
+
+#button:hover {
+  cursor: pointer;
+}
