--- a/components/part-item-field/style.css
+++ b/components/part-item-field/style.css
@@ -1,3 +1,8 @@
 :host {
-  display: block;
+  display: grid;
+  grid-auto-flow: column;
+  grid-column-gap: 20px;
+
+  align-items: center;
+  justify-content: flex-start;
 }
