--- a/components/part-navbar/style.css
+++ b/components/part-navbar/style.css
@@ -1,3 +1,23 @@
 :host {
   display: block;
 }
+
+#links {
+  display: grid;
+  grid-auto-flow: column;
+  grid-gap: 20px;
+
+  align-items: center;
+  justify-content: flex-start;
+
+  box-sizing: border-box;
+  padding: 20px;
+}
+
+#link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  color: inherit;
+}
