--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,28 @@
 
+html,
 body {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+html {
+  position: absolute;
+  overflow: hidden;
+}
+
+body {
+  overflow: scroll;
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', Helvetica, arial, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  color: #000;
+  text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
 }
