--- a/components/page-editor/template.html
+++ b/components/page-editor/template.html
@@ -1,9 +1,9 @@
 <div id="page">
   <div id="heading">
-    <h1 id="title">Models</h1>
+    <h1 id="title">Desidera</h1>
+    <h2 id="subtitle">Models</h2>
   </div>
   <div id="main">
-    <part-button data.link="data.link_new_model">Add model</part-button>
     <part-list-model id="models" data.items="data.models"></part-list-model>
   </div>
 </div>
