--- a/components/page-editor-list-entry/template.html
+++ b/components/page-editor-list-entry/template.html
@@ -1,5 +1,5 @@
 <div id="heading">
-  <h1 id="title">Content</h1>
+  <h1 id="title">Editor</h1>
   <h2 id="subtitle">Entries</h2>
 </div>
 <div id="side">
@@ -7,5 +7,5 @@
 </div>
 <div id="main">
   <part-button id="new" data.link="data.link_new_entry">Add new entry</part-button>
-  <part-list-entry id="entries"  data.model="data.model" data.entries="data.entries"></part-list-entry>
+  <part-list-entry id="entries" data.items="data.entries"></part-list-entry>
 </div>
