--- a/components/page-editor/template.html
+++ b/components/page-editor/template.html
@@ -1,6 +1,6 @@
 <div id="page">
   <div id="heading">
-    <h1 id="title">Desidera</h1>
+    <h1 id="title">Editor</h1>
     <h2 id="subtitle">Models</h2>
   </div>
   <div id="main">
