--- a/components/part-item-entry/template.html
+++ b/components/part-item-entry/template.html
@@ -1,3 +1,3 @@
-<a id="link">
-  <div id="label" text="data._id"></div>
+<a id="link" attr.href="data.item.link">
+  <div id="label" text="data.item._id"></div>
 </a>
