--- a/components/part-list-entry/template.html
+++ b/components/part-list-entry/template.html
@@ -1,3 +1,3 @@
-<div id="items" repeat="data.items">
-  <part-item-entry id="item" data.item="item" ev.click="on_click_item"></part-item-entry>
-</div>
+<template id="items" repeat="data.items">
+  <part-item-entry id="item" data.item="scope.item"></part-item-entry>
+</template>
