--- a/components/part-field-string/template.html
+++ b/components/part-field-string/template.html
@@ -1,4 +1,4 @@
 <div id="field">
   <label id="label" text="data.label"></label>
-  <input id="input" type="value">
+  <input id="input" type="value" prop.value="data.schema.value">
 </div>
