--- a/components/page-editor-edit-entry/template.html
+++ b/components/page-editor-edit-entry/template.html
@@ -1,7 +1,8 @@
 <div id="heading">
   <h1 id="title">Editor</h1>
-  <h2 id="subtitle" text="data.entry.model.name"></h2>
+  <h2 id="subtitle" text="data.entry.name"></h2>
 </div>
 <div id="main">
-  <part-form-entry data.model="data.entry.model"></part-form-entry>
+  <part-form-entry id="form" data.model="data.entry"></part-form-entry>
+  <part-button id="save" ev.click="on_click_save">Save</part-button>
 </div>
