--- a/components/page-admin-make-model/template.html
+++ b/components/page-admin-make-model/template.html
@@ -6,4 +6,4 @@
     <part-form-model id="form"></part-form-model>
     <part-button id="create" ev.click="on_click_create">Create</part-button>
   </div>
-</part-dialog>
+</div>
