--- a/components/page-admin-view-model/template.html
+++ b/components/page-admin-view-model/template.html
@@ -5,7 +5,7 @@
   <div id="main">
     <div id="section">
       <div id="description" text="data.model.description"></div>
-      <part-button id="button_edit_model">Edit</part-button>
+      <part-button id="button_edit_model" data.link="data.model.edit_link">Edit</part-button>
     </div>
     <div id="section">
       <h2 id="subsubtitle">Fields</h2>
