--- a/components/part-form-model/template.html
+++ b/components/part-form-model/template.html
@@ -1,1 +1,1 @@
-<part-form id="form" data.fields="data.schema.fields"></part-form>
+<part-form id="form" data.fields="data.fields" data.values="data.values"></part-form>
