--- a/components/part-item-model/template.html
+++ b/components/part-item-model/template.html
@@ -1,3 +1,3 @@
-<a id="link" attr.href="data.item.link">
+<a id="link" attr.href="data.item.view_link">
   <div id="label" text="data.item.name"></div>
 </a>
